rokovi/ppj_jun_2018/1/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: DISP_T '(' izraz ')'
    4        | SIZE_T '(' izraz ')'
    5        | ID_T '=' izraz

    6 izraz: izraz PKSABIRANJE_T izraz
    7      | izraz PKMNOZENJE_T izraz
    8      | izraz TRANS_T
    9      | izraz '*' izraz
   10      | matrica

   11 matrica: '[' niz_vrsta ']'
   12        | ID_T

   13 niz_vrsta: niz_vrsta ';' '[' vrsta ']'
   14          | '[' vrsta ']'

   15 vrsta: vrsta ',' BROJ_T
   16      | BROJ_T


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'(' (40) 3 4
')' (41) 3 4
'*' (42) 9
',' (44) 15
';' (59) 13
'=' (61) 5
'[' (91) 11 13 14
']' (93) 11 13 14
error (256)
DISP_T (258) 3
SIZE_T (259) 4
PKSABIRANJE_T (260) 6
PKMNOZENJE_T (261) 7
TRANS_T (262) 8
BROJ_T (263) 15 16
ID_T (264) 5 12


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1 2, on right: 0 1
naredba (21)
    on left: 3 4 5, on right: 1 2
izraz (22)
    on left: 6 7 8 9 10, on right: 3 4 5 6 7 8 9
matrica (23)
    on left: 11 12, on right: 10
niz_vrsta (24)
    on left: 13 14, on right: 11 13
vrsta (25)
    on left: 15 16, on right: 13 14 15


State 0

    0 $accept: . program $end

    DISP_T  shift, and go to state 1
    SIZE_T  shift, and go to state 2
    ID_T    shift, and go to state 3

    program  go to state 4
    naredba  go to state 5


State 1

    3 naredba: DISP_T . '(' izraz ')'

    '('  shift, and go to state 6


State 2

    4 naredba: SIZE_T . '(' izraz ')'

    '('  shift, and go to state 7


State 3

    5 naredba: ID_T . '=' izraz

    '='  shift, and go to state 8


State 4

    0 $accept: program . $end
    1 program: program . naredba '\n'

    $end    shift, and go to state 9
    DISP_T  shift, and go to state 1
    SIZE_T  shift, and go to state 2
    ID_T    shift, and go to state 3

    naredba  go to state 10


State 5

    2 program: naredba . '\n'

    '\n'  shift, and go to state 11


State 6

    3 naredba: DISP_T '(' . izraz ')'

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 14
    matrica  go to state 15


State 7

    4 naredba: SIZE_T '(' . izraz ')'

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 16
    matrica  go to state 15


State 8

    5 naredba: ID_T '=' . izraz

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 17
    matrica  go to state 15


State 9

    0 $accept: program $end .

    $default  accept


State 10

    1 program: program naredba . '\n'

    '\n'  shift, and go to state 18


State 11

    2 program: naredba '\n' .

    $default  reduce using rule 2 (program)


State 12

   12 matrica: ID_T .

    $default  reduce using rule 12 (matrica)


State 13

   11 matrica: '[' . niz_vrsta ']'

    '['  shift, and go to state 19

    niz_vrsta  go to state 20


State 14

    3 naredba: DISP_T '(' izraz . ')'
    6 izraz: izraz . PKSABIRANJE_T izraz
    7      | izraz . PKMNOZENJE_T izraz
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz

    PKSABIRANJE_T  shift, and go to state 21
    PKMNOZENJE_T   shift, and go to state 22
    TRANS_T        shift, and go to state 23
    '*'            shift, and go to state 24
    ')'            shift, and go to state 25


State 15

   10 izraz: matrica .

    $default  reduce using rule 10 (izraz)


State 16

    4 naredba: SIZE_T '(' izraz . ')'
    6 izraz: izraz . PKSABIRANJE_T izraz
    7      | izraz . PKMNOZENJE_T izraz
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz

    PKSABIRANJE_T  shift, and go to state 21
    PKMNOZENJE_T   shift, and go to state 22
    TRANS_T        shift, and go to state 23
    '*'            shift, and go to state 24
    ')'            shift, and go to state 26


State 17

    5 naredba: ID_T '=' izraz .
    6 izraz: izraz . PKSABIRANJE_T izraz
    7      | izraz . PKMNOZENJE_T izraz
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz

    PKSABIRANJE_T  shift, and go to state 21
    PKMNOZENJE_T   shift, and go to state 22
    TRANS_T        shift, and go to state 23
    '*'            shift, and go to state 24

    $default  reduce using rule 5 (naredba)


State 18

    1 program: program naredba '\n' .

    $default  reduce using rule 1 (program)


State 19

   14 niz_vrsta: '[' . vrsta ']'

    BROJ_T  shift, and go to state 27

    vrsta  go to state 28


State 20

   11 matrica: '[' niz_vrsta . ']'
   13 niz_vrsta: niz_vrsta . ';' '[' vrsta ']'

    ']'  shift, and go to state 29
    ';'  shift, and go to state 30


State 21

    6 izraz: izraz PKSABIRANJE_T . izraz

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 31
    matrica  go to state 15


State 22

    7 izraz: izraz PKMNOZENJE_T . izraz

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 32
    matrica  go to state 15


State 23

    8 izraz: izraz TRANS_T .

    $default  reduce using rule 8 (izraz)


State 24

    9 izraz: izraz '*' . izraz

    ID_T  shift, and go to state 12
    '['   shift, and go to state 13

    izraz    go to state 33
    matrica  go to state 15


State 25

    3 naredba: DISP_T '(' izraz ')' .

    $default  reduce using rule 3 (naredba)


State 26

    4 naredba: SIZE_T '(' izraz ')' .

    $default  reduce using rule 4 (naredba)


State 27

   16 vrsta: BROJ_T .

    $default  reduce using rule 16 (vrsta)


State 28

   14 niz_vrsta: '[' vrsta . ']'
   15 vrsta: vrsta . ',' BROJ_T

    ']'  shift, and go to state 34
    ','  shift, and go to state 35


State 29

   11 matrica: '[' niz_vrsta ']' .

    $default  reduce using rule 11 (matrica)


State 30

   13 niz_vrsta: niz_vrsta ';' . '[' vrsta ']'

    '['  shift, and go to state 36


State 31

    6 izraz: izraz . PKSABIRANJE_T izraz
    6      | izraz PKSABIRANJE_T izraz .
    7      | izraz . PKMNOZENJE_T izraz
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz

    PKMNOZENJE_T  shift, and go to state 22
    TRANS_T       shift, and go to state 23
    '*'           shift, and go to state 24

    $default  reduce using rule 6 (izraz)


State 32

    6 izraz: izraz . PKSABIRANJE_T izraz
    7      | izraz . PKMNOZENJE_T izraz
    7      | izraz PKMNOZENJE_T izraz .
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz

    TRANS_T  shift, and go to state 23

    $default  reduce using rule 7 (izraz)


State 33

    6 izraz: izraz . PKSABIRANJE_T izraz
    7      | izraz . PKMNOZENJE_T izraz
    8      | izraz . TRANS_T
    9      | izraz . '*' izraz
    9      | izraz '*' izraz .

    TRANS_T  shift, and go to state 23

    $default  reduce using rule 9 (izraz)


State 34

   14 niz_vrsta: '[' vrsta ']' .

    $default  reduce using rule 14 (niz_vrsta)


State 35

   15 vrsta: vrsta ',' . BROJ_T

    BROJ_T  shift, and go to state 37


State 36

   13 niz_vrsta: niz_vrsta ';' '[' . vrsta ']'

    BROJ_T  shift, and go to state 27

    vrsta  go to state 38


State 37

   15 vrsta: vrsta ',' BROJ_T .

    $default  reduce using rule 15 (vrsta)


State 38

   13 niz_vrsta: niz_vrsta ';' '[' vrsta . ']'
   15 vrsta: vrsta . ',' BROJ_T

    ']'  shift, and go to state 39
    ','  shift, and go to state 35


State 39

   13 niz_vrsta: niz_vrsta ';' '[' vrsta ']' .

    $default  reduce using rule 13 (niz_vrsta)
